--- a/Readme
+++ b/Readme
@@ -14,4 +14,4 @@ This system allows librarians to efficiently manage books, including adding, upd
 ## Setup Instructions
 1. Clone the repository:
    ```bash
-   git clone <repository-url>
+   git clone <https://github.com/DewanganPiyush/DigitalLibraryBookManagementSystem/tree/master>
